--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -21,7 +21,7 @@
             	<img class="icon" src="/images/platinum.png" />
                 <h3>Platinum Sponsors</h3>
 				<a href="#"><img src="{{.Params.logo}}"/></a>
-				{{ .Content }}
+				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div>
 			{{ end }} 
@@ -30,7 +30,7 @@
                 <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsors</h3>
 				<a href="#"><img src="{{.Params.logo}}"/></a>
-				{{ .Content }}
+				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div>
 			{{ end }} 
@@ -39,7 +39,7 @@
                 <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsors</h3>
 				<a href="#"><img src="{{.Params.logo}}"/></a>
-				{{ .Content }}
+				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div>
 			{{ end }} 
@@ -48,7 +48,7 @@
                 <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsors</h3>
 				<a href="#"><img src="{{.Params.logo}}"/></a>
-				{{ .Content }}
+				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
 			</div>
 			{{ end }}
