--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -78,7 +78,7 @@
                 <div class="speaker-section col-md-3">
                     <h3>Be a speaker!</h3>
                     <p>Submit your proposal to become a speaker at <b>GopherCon 2015</b> before March 31st</p>
-                    <a href="http://cfp.gophercon.com/events/gc15" class="btn btn-blue" target="_blank">Speakers</a>
+                    <a href="http://cfp.gophercon.com/events/gc15" class="btn btn-blue" target="_blank">Become a Speaker</a>
                 </div>
             </div>
         </div>
@@ -205,7 +205,7 @@
         	<div class="col-md-10 col-md-offset-1">
                 <h1>Hotels</h1>
                 <hr />
-                <p>We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates.</p>
+                <p>We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates. If you have any trouble, call 1-866-650-8858 for help!</p>
         	</div>
         </div>
 
