--- a/themes/gophercon/layouts/taxonomy/sponsor.terms.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.terms.html
@@ -6,15 +6,15 @@
 
 <main>
     <section class="row"> 
-    	<div class="sponsors col-md-10">
-{{ range $key, $value := .Data.Terms }}
-			<div class="col-md-12 {{ $key }}">
-				<img class="icon" src="/images/{{ $key }}.png" />
-				<h1>	<a href="{{ $key | urlize }}">{{ $key | upper }} SPONSORS</a> </h1>
+		<div class="sponsors col-md-10">
+			{{ $diamonds := $data.Get "diamond" }}
+			{{  $diamonds }}
+			<div class="col-md-12 diamond">
+				<img class="icon" src="/images/diamond.png" />
+			<h1>	<a href="">SPONSORS</a> </h1>
                 <div class="clearfix"></div>
-            </div>
+			</div>
 
-{{ end }}
         </div><!-- sponsors col-md-10 -->
         
         <div class="sidebar col-md-2">
