--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -1,4 +1,4 @@
-{{ partial "interior-header.html" . }}
+{{ partial "header.html" . }}
 {{ $baseurl := .Site.BaseUrl }}
 
 <main>
@@ -93,4 +93,4 @@
         </div><!-- sidebar --> 
     </section>
 </main>
-{{ partial "interior-footer.html" . }}
+{{ partial "footer.html" . }}
