--- a/themes/gophercon/layouts/taxonomy/sponsor.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.html
@@ -1,52 +1,4 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="GopherCon is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language." name="description">
-<meta content="go, golang, gophercon, convention" name="keywords">
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<meta content="gophercon.com" name="author">
-<meta content="GopherCon 2015" name="copyright">
-<title>Gophercon 2015</title>
-<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/main.css" rel="stylesheet">
-<link href="/css/animate.css" rel="stylesheet">
-</head>
-<body>
-
-<header>
-	<div class="row colors">
-    	<div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-        <div class="col-md-2 animated slideInDown"></div>
-    </div>
-    <nav>
-    	<ul>
-        	<li><a href="#">About</a></li>
-        	<li><a href="#">Sponsors</a></li>
-            <li><a href="#">Schedule</a></li>
-        </ul>
-        <a class="logo-small animated slideInDown" href="index.html">
-    		<img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
-        </a>
-    </nav>
-	<div class="header-content">
-    	<div class="container">
-            <div class="row">
-            	<div class="col-md-8 col-md-offset-2 interior-header">
-                	<h1>SPONSOR LIST</h1>
-                    <p>Without their support amet, consectetur adipiscing elit ut et ac enim nec dignissim vivamus dapibus velit et.</p>
-                </div><!-- col-md-8 -->
-            </div><!-- row -->
-        </div><!-- container -->
-    </div><!-- header-content -->
-</header>
+{{ partial "header.html" . }}
 
 <div class="sponsor-signUp">
 	<div class="container">
@@ -117,67 +69,8 @@
 		{{ end }}
         </div><!-- sponsors col-md-10 -->
         
-        <div class="sidebar col-md-2">
-        	<h3>Sidebar Content</h3>
-        	<br />
-        	<p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-            <p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-            <p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-        </div><!-- sidebar --> 
+        {{ partial "sidebar.html" . }}
     </section>
 </main>
 
-<footer>
-	<div class="container">
-    	<div class="row">
-        	<div class="col-md-12">
-            	<p>© 2015 GopherAcademy, LLC</p>
-                <p>The Gopher character is based on the Go mascot designed by
-                <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
-                and copyrighted under the
-                <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
-				</p>
-            </div>
-        </div>
-    </div>
-</footer>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<script src="/bootstrap/js/bootstrap.min.js"></script>
-
-</body>
-</html>
-
-
+{{ partial "footer.html" . }}
