--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li><a href="/about">About</a></li>
 					<li><a href="/sponsors">Sponsors</a></li>
-					<li><a href="/schedule">Schedule</a></li>
+					<li><a href="#">Schedule</a></li>
 				</ul>
 				<a class="logo-small animated slideInDown" href="index.html">
 					<img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
