--- a/themes/gophercon/layouts/taxonomy/sponsor.terms.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.terms.html
@@ -4,78 +4,17 @@
 <main>
     <section class="row"> 
 		<div class="sponsors col-md-10">
-			{{ range $key, $taxonomy := .Site.Taxonomies.sponsors}}
 			<div class="col-md-12 diamond">
-				<img class="icon" src="/images/{{$key}}.png" />
-				{{ range $taxonomy.Pages }}
-				<h1>	<a href="{{.Permalink}}">{{ .LinkTitle}} </a> </h1>
+                <h3>DIAMOND SPONSORS</h3>
+				<img class="icon" src="/images/diamond.png" />
+	  			{{ range .Site.Taxonomies.sponsors.diamond}}
+				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
 				{{ end }}
                 <div class="clearfix"></div>
 			</div>
-		{{ end }} 
         </div><!-- sponsors col-md-10 -->
         
-        <div class="sidebar col-md-2">
-        	<h3>Sidebar Content</h3>
-        	<br />
-        	<p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-            <p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-            <p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-        </div><!-- sidebar --> 
+        {{ partial "sidebar.html" . }}
     </section>
 </main>
-
-<footer>
-	<div class="container">
-    	<div class="row">
-        	<div class="col-md-12">
-            	<p>© 2015 GopherAcademy, LLC</p>
-                <p>The Gopher character is based on the Go mascot designed by
-                <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
-                and copyrighted under the
-                <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
-				</p>
-            </div>
-        </div>
-    </div>
-</footer>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<script src="/bootstrap/js/bootstrap.min.js"></script>
-
-</body>
-</html>
-
-
+{{ partial "footer.html" . }}
