more template fixes

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -32,9 +32,9 @@
     <nav>
     	<ul>
 			<li><a href="/about">About</a></li>
-        	<li><a href="/2015/sponsor">Sponsors</a></li>
-			<li><a href="/2015/schedule">Schedule</a></li>
-			<li><a href="/2015/news">News</a></li>
+        	<li><a href="/sponsors">Sponsors</a></li>
+			<li><a href="#">Schedule</a></li>
+			<li><a href="#">News</a></li>
         </ul>
     </nav>
 
