--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -159,42 +159,41 @@
             
         	<!---------- Diamond Sponsors ---------->
             <div class="col-md-12 diamond">
-				<a href="#"><img src="images/temp-logos/twitch.png"/></a>
+	  			{{ range .Site.Taxonomies.sponsors.diamond}}
+				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
             
             <!---------- Platinum Sponsors ---------->
             <div class="col-md-12 platinum">
+	  			{{ range .Site.Taxonomies.sponsors.platinum}}
+				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Platinum Sponsors End -->
             
             <!---------- Gold Sponsors ---------->
             <div class="col-md-12 gold">
-                <a href="#"><img src="images/temp-logos/apcera.png"/></a>
-                <a href="#"><img src="images/temp-logos/coreos.png"/></a>
-                <a href="#"><img src="images/temp-logos/influxdb.png"/></a>
-                <a href="#"><img src="images/temp-logos/datadog.png"/></a>
-				<a href="#"><img src="images/temp-logos/bugsnag.png"/></a>
-				<a href="#"><img src="images/temp-logos/nodeprime.png"/></a>
-				<a href="#"><img src="images/temp-logos/timehop.png"/></a>
-				<a href="#"><img src="images/temp-logos/yext.png"/></a>
+	  			{{ range .Site.Taxonomies.sponsors.gold}}
+				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Gold Sponsors End -->
             
             <!---------- Silver Sponsors ---------->
             <div class="col-md-12 silver">
-                <a href="#"><img src="images/temp-logos/ironio.png"/></a>
-                <a href="#"><img src="images/temp-logos/fastly.png"/></a>
-                <a href="#"><img src="images/temp-logos/xpient.png"/></a>
-                <a href="#"><img src="images/temp-logos/qwinixtech.png"/></a>
+	  			{{ range .Site.Taxonomies.sponsors.silver}}
+				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Silver Sponsors End -->
             
             <!---------- Bronze Sponsors ---------->
             <div class="col-md-12 bronze">
-                <a href="#"><img src="images/temp-logos/crowdstrike.png"/></a>
-                <a href="#"><img src="images/temp-logos/shopkeep.png"/></a>
-				<a href="#"><img src="images/temp-logos/metacasts.png"/></a>
+	  			{{ range .Site.Taxonomies.sponsors.bronze}}
+				<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
+				{{ end }}
                 <div class="clearfix"></div>
             </div><!-- Bronze Sponsors End -->
             
