more header & sidebar work

--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -31,6 +31,7 @@
 					<li><a href="/about">About</a></li>
 					<li><a href="/sponsors">Sponsors</a></li>
 					<li><a href="#">Schedule</a></li>
+					<li><a href="#">News</a></li>
 				</ul>
 				<a class="logo-small animated slideInDown" href="index.html">
 					<img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
@@ -40,8 +41,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 interior-header">
-							<h1>Thanks to our sponsors</h1>
-							<p>Without their support amet, consectetur adipiscing elit ut et ac enim nec dignissim vivamus dapibus velit et.</p>
+							<h1>Gophers of the world, Unite!</h1>
+							<p>GopherCon 2015 will be the largest gathering of Go developers ever.  Join us in Denver.</p>
 						</div><!-- col-md-8 -->
 					</div><!-- row -->
 				</div><!-- container -->
@@ -51,7 +52,7 @@
 		<div class="sponsor-signUp">
 			<div class="container">
 				<div class="col-md-12">
-					<p>Become a sponsor lorem ipsum dolor sit amet lariet conseti lom <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank" class="btn btn-orange">Sign Up</a></p>
+					<p>Interested in sponsoring?<a href="mailto:gophercon@gopheracademy.com" class="btn btn-orange" target="_blank" class="btn btn-orange">Get In Touch</a></p>
 				</div><!-- col-md-12 -->
 			</div><!-- container -->
 		</div><!-- sponsor-signUp -->
