--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -28,12 +28,13 @@
 			</div>
 			<nav>
 				<ul>
+					<li><a href="/">Home</a></li>
 					<li><a href="/about">About</a></li>
 					<li><a href="/sponsors">Sponsors</a></li>
 					<li><a href="#">Schedule</a></li>
 					<li><a href="#">News</a></li>
 				</ul>
-				<a class="logo-small animated slideInDown" href="index.html">
+				<a class="logo-small animated slideInDown" href="/">
 					<img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" />
 				</a>
 			</nav>
@@ -42,7 +43,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 interior-header">
 							<h1>Gophers of the world, Unite!</h1>
-							<p>GopherCon 2015 will be the largest gathering of Go developers ever.  Join us in Denver.</p>
+							<p>GopherCon 2015 will be the largest gathering of Go developers ever. </p>
 						</div><!-- col-md-8 -->
 					</div><!-- row -->
 				</div><!-- container -->
