--- a/themes/gophercon/layouts/partials/sidebar.html
+++ b/themes/gophercon/layouts/partials/sidebar.html
@@ -3,12 +3,53 @@
     <br />
     <p>Thank you to these companies that support Go and GopherCon 2015</p>
     <br />
-            <div class="col-md-12 platinum">
-	  		<ul>	{{ range .Site.Taxonomies.sponsors.platinum}}
-			<li>	<a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a> </li>
-				{{ end }}
-                <div class="clearfix"></div>
-				</ul>
-            </div><!-- Platinum Sponsors End -->
+		<h4>Diamond Sponsors</h4>
+	  		<ul>	
+			{{ range .Site.Taxonomies.sponsors.diamond}}
+			<li>	
+				<a href="{{.Page.Permalink}}">{{ .Page.Title}}</a> 
+			</li>
+		    {{ end }}
+			</ul>
+		<h4>Platinum Sponsors</h4>
+	  		<ul>	
+			{{ range .Site.Taxonomies.sponsors.Platinum}}
+			<li>	
+				<a href="{{.Page.Permalink}}">{{ .Page.Title}}</a> 
+			</li>
+		    {{ end }}
+			</ul>
+		<h4>Gold Sponsors</h4>
+	  		<ul>	
+			{{ range .Site.Taxonomies.sponsors.gold}}
+			<li>	
+				<a href="{{.Page.Permalink}}">{{ .Page.Title}}</a> 
+			</li>
+		    {{ end }}
+			</ul>
+		<h4>Silver Sponsors</h4>
+	  		<ul>	
+			{{ range .Site.Taxonomies.sponsors.silver}}
+			<li>	
+				<a href="{{.Page.Permalink}}">{{ .Page.Title}}</a> 
+			</li>
+		    {{ end }}
+			</ul>	
+		<h4>Silver Sponsors</h4>
+	  		<ul>	
+			{{ range .Site.Taxonomies.sponsors.silver}}
+			<li>	
+				<a href="{{.Page.Permalink}}">{{ .Page.Title}}</a> 
+			</li>
+		    {{ end }}
+			</ul>
+		<h4>Bronze Sponsors</h4>
+	  		<ul>	
+			{{ range .Site.Taxonomies.sponsors.bronze}}
+			<li>	
+				<a href="{{.Page.Permalink}}">{{ .Page.Title}}</a> 
+			</li>
+		    {{ end }}
+			</ul>
     <br />
 </div><!-- sidebar -->
