--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -33,8 +33,8 @@
     	<ul>
 			<li><a href="/about">About</a></li>
         	<li><a href="/sponsors">Sponsors</a></li>
-			<li><a href="#">Schedule</a></li>
-			<li><a href="#">News</a></li>
+			<li><a href="/2015/schedule">Schedule</a></li>
+			<li><a href="/code-of-conduct">Code of conduct</a></li>
         </ul>
     </nav>
 
