code of conduct and single sponsor theme

--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -54,43 +54,7 @@
 			{{ end }}
         </div><!-- sponsors col-md-10 -->
         
-        <div class="sidebar col-md-2">
-        	<h3>Sidebar Content</h3>
-        	<br />
-        	<p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-            <p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-            <p>Some sample text here for stuff</p>
-            <br />
-        	<ul>
-            	<li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-                <li>Lorem ipsum</li>
-                <li>Dolor sit</li>
-                <li>Amet lariet</li>
-            </ul>
-            <br />
-        </div><!-- sidebar --> 
+        {{ partial "sidebar.html" . }}
     </section>
 </main>
 {{ partial "footer.html" . }}
