fix code of conduct link and hide schedule

--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -31,7 +31,7 @@
 					<li><a href="/">Home</a></li>
 					<li><a href="/about">About</a></li>
 					<li><a href="/sponsors">Sponsors</a></li>
-					<li><a href="/2015/schedule">Schedule</a></li>
+					<!--	<li><a href="/2015/schedule">Schedule</a></li> -->
 					<li><a href="/code-of-conduct">Code of conduct</a></li>
 				</ul>
 				<a class="logo-small animated slideInDown" href="/">
