--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -34,6 +34,7 @@
 			<li><a href="/about">About</a></li>
         	<li><a href="/sponsors">Sponsors</a></li>
 			<!--<li><a href="/2015/schedule">Schedule</a></li> -->
+			<li><a href="/news">News</a></li>
 			<li><a href="/code-of-conduct">Code of Conduct</a></li>
         </ul>
     </nav>
