--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -10,8 +10,8 @@
             <div class="col-md-12 diamond">
             	<img class="icon" src="/images/diamond.png" />
                 <h3>Diamond Sponsors</h3>
-				<a href="#"><img src="{{.Params.logo}}" /></a>
-				{{ .Content }}
+				<a href="{{.Params.site}}"><img src="{{.Params.logo}}" /></a>
+				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
 			{{ end }} 
@@ -20,7 +20,7 @@
             <div class="col-md-12 platinum">
             	<img class="icon" src="/images/platinum.png" />
                 <h3>Platinum Sponsors</h3>
-				<a href="#"><img src="{{.Params.logo}}"/></a>
+				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
 				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div>
@@ -29,7 +29,7 @@
             <div class="col-md-12 gold">
                 <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsors</h3>
-				<a href="#"><img src="{{.Params.logo}}"/></a>
+				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
 				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div>
@@ -38,7 +38,7 @@
             <div class="col-md-12 silver">
                 <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsors</h3>
-				<a href="#"><img src="{{.Params.logo}}"/></a>
+				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
 				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
             </div>
@@ -47,7 +47,7 @@
             <div class="col-md-12 bronze">
                 <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsors</h3>
-				<a href="#"><img src="{{.Params.logo}}"/></a>
+				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
 				<p>{{ .Content }}</p>
                 <div class="clearfix"></div>
 			</div>
