--- a/themes/gophercon/layouts/taxonomy/sponsor.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.html
@@ -9,7 +9,7 @@
             <div class="col-md-12 diamond">
             	<img class="icon" src="/images/diamond.png" />
 				<h3>Diamond Sponsors</h3>
-				<a href="{{ .Permalink }}"><img src="{{ .Params.logo }}" /></a>
+				<a href="{{ .Params.site}}"><img src="{{ .Params.logo }}" /></a>
                 <div class="clearfix"></div>
             </div><!-- Diamond Sponsors End -->
               {{end}}
