--- a/themes/gophercon/layouts/_default/single.html
+++ b/themes/gophercon/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ partial "header.html" . }}
 
-<main>
+<main class="container generic">
     <section class="row"> 
-        <div class="generic col-md-10">
+        <div class="col-md-9">
             {{ .Content }}
         </div><!-- generic col-md-10 -->
 
