--- a/themes/gophercon/layouts/taxonomy/sponsor.terms.html
+++ b/themes/gophercon/layouts/taxonomy/sponsor.terms.html
@@ -1,9 +1,9 @@
 {{ partial "header.html" . }}
 {{ $baseurl := .Site.BaseUrl }}
 
-<main>
+<main class="container">
     <section class="row"> 
-		<div class="sponsors col-md-10">
+		<div class="sponsors col-md-12">
 			<div class="col-md-12 diamond">
                 <h3>DIAMOND SPONSORS</h3>
 				<img class="icon" src="/images/diamond.png" />
