--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -537,7 +537,7 @@ main .home-sponsors .bronze a {
 
 /*-------------------- Sidebar Styles --------------------*/
 .sidebar {
-	background: #f6f2e1;
+	background: #f9f9f9;
 }
 .sidebar a img {
 	max-width: 70%; 
