--- a/themes/gophercon/layouts/section/news.html
+++ b/themes/gophercon/layouts/section/news.html
@@ -1,12 +1,11 @@
 {{ partial "header.html" . }}
 
 
-<main>
+<main class="container generic">
     <section class="row"> 
 		<div class="generic col-md-9">
 			<h3>GopherCon News</h3>
 			{{ range .Paginator.Pages }}
-			<div class="well">
 		
 				<h4><a href="{{ .RelPermalink }}">{{ .Title }}</a></h4>
 				<small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small><br/><br/>
@@ -14,7 +13,6 @@
 				{{ if .Truncated }} <br/><br/>
     				<a class="btn btn-primary" href="{{ .RelPermalink }}">Read More…</a>
 				{{ end }}
-			</div>
 			{{ end }}
 
 			{{ template "_internal/pagination.html" . }}
